[gd_scene load_steps=2 format=3 uid="uid://ba0edkvdquj2l"]

[ext_resource type="Script" uid="uid://buiu3he5gc5yg" path="res://scripts/ui/HeatLever.gd" id="1_heatlever"]

[node name="HeatLever" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 80.0
script = ExtResource("1_heatlever")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeverContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Heat0" type="Label" parent="LeverContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Warm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heat1" type="Label" parent="LeverContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heat2" type="Label" parent="LeverContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inferno"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownRing" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpshiftButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -35.0
offset_right = 185.0
offset_bottom = -15.0
grow_vertical = 2
text = "UPSHIFT (R)"
